--- a/Key Data Extraction/keydataext.ipynb
+++ b/Key Data Extraction/keydataext.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\panka\\OneDrive\\Desktop\\Euron\\GenAi\\9.Level_1_Application_Development\\Level-1-Apllication-Development\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -50,10 +58,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\panka\\OneDrive\\Desktop\\Euron\\GenAi\\9.Level_1_Application_Development\\Level-1-Apllication-Development\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3577: LangChainDeprecationWarning: As of langchain-core 0.3.0, LangChain uses pydantic v2 internally. The langchain_core.pydantic_v1 module was a compatibility shim for pydantic v1, and should no longer be used. Please update the code to import from Pydantic directly.\n",
+      "\n",
+      "For example, replace imports like: `from langchain_core.pydantic_v1 import BaseModel`\n",
+      "with: `from pydantic import BaseModel`\n",
+      "or the v1 compatibility namespace if you are working in a code base that has not been fully upgraded to pydantic 2 yet. \tfrom pydantic.v1 import BaseModel\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate,MessagesPlaceholder\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    \"\"\"Information about a person.\"\"\"\n",
+    "\n",
+    "    # ^ Doc-string for the entity Person.\n",
+    "    # This doc-string is sent to the LLM as the description of the schema Person,\n",
+    "    # and it can help to improve extraction results.\n",
+    "\n",
+    "    # Note that:\n",
+    "    # 1. Each field is an `optional` -- this allows the model to decline to extract it!\n",
+    "    # 2. Each field has a `description` -- this description is used by the LLM.\n",
+    "    # Having a good description can help improve extraction results.\n",
+    "    name: Optional[str] = Field(\n",
+    "        default=None, description=\"The name of the person\"\n",
+    "    )\n",
+    "    lastname: Optional[str] = Field(\n",
+    "        default=None, description=\"The lastname of the person if known\"\n",
+    "    )\n",
+    "    country: Optional[str] = Field(\n",
+    "        default=None, description=\"The country of the person if known\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definig Extractor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "\n",
+    "# Defining a custom prompt to provide instructions and any additional context.\n",
+    "# 1) we can add examples into the prompt template to improve extraction quality\n",
+    "# 2) we can introduce additional parameters to take context into account (e.g., include metadata\n",
+    "#    about the document from which the text was extracted.)\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"You are an expert extraction algorithm. \"\n",
+    "            \"Only extract relevant information as Name and country name  from the text. \"\n",
+    "            \"If you do not know the value of an attribute asked to extract, \"\n",
+    "            \"return null for the attribute's value.\"\n",
+    "        \n",
+    "        ),\n",
+    "        (\"human\", \"{text}\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain=prompt | llm.with_structured_output(schema=Person)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comment = \"I absolutely love this product! It's been a game-changer for my daily routine. The quality is top-notch and the customer service is outstanding. I've recommended it to all my friends and family. - Sarah Johnson, India\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(name='Sarah Johnson', lastname=None, country=None)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"text\": comment})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extraction of a list of entities rather than a single entity\n",
+    "* In real projects we will probably work with a large text that includes more than one user review. **We can extract the key data of several users by nesting Pydantic models**.\n",
+    "* See how the Data model definition is including the Person model. This is technically called \"nesting\" models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Optional\n",
+    "\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    \"\"\"Information about a person.\"\"\"\n",
+    "\n",
+    "    # ^ Doc-string for the entity Person.\n",
+    "    # This doc-string is sent to the LLM as the description of the schema Person,\n",
+    "    # and it can help to improve extraction results.\n",
+    "\n",
+    "    # Note that:\n",
+    "    # 1. Each field is an `optional` -- this allows the model to decline to extract it!\n",
+    "    # 2. Each field has a `description` -- this description is used by the LLM.\n",
+    "    # Having a good description can help improve extraction results.\n",
+    "    name: Optional[str] = Field(\n",
+    "        default=None, description=\"The name of the person\"\n",
+    "    )\n",
+    "    lastname: Optional[str] = Field(\n",
+    "        default=None, description=\"The lastname of the person if known\"\n",
+    "    )\n",
+    "    country: Optional[str] = Field(\n",
+    "        default=None, description=\"The country of the person if known\"\n",
+    "    )\n",
+    "\n",
+    "class Data(BaseModel):\n",
+    "    \"\"\"Extracted data about people.\"\"\"\n",
+    "\n",
+    "    # Creates a model so that we can extract multiple entities.\n",
+    "    people: List[Person]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain = prompt | llm.with_structured_output(schema=Data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comment = \"I'm so impressed with this product! It has truly transformed how I approach my daily tasks. The quality exceeds my expectations, and the customer support is truly exceptional. I've already suggested it to all my colleagues and relatives. - Emily Clarke, Canada\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(people=[Person(name='Emily Clarke', lastname=None, country=None)])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke({\"text\": comment})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(people=[Person(name='Alice Johnson', lastname=None, country=None)])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example input text that mentions multiple people\n",
+    "text_input = \"\"\"\n",
+    "Alice Johnson from Canada recently reviewed a book she loved. Meanwhile, Bob Smith from the USA shared his insights on the same book in a different review. Both reviews were very insightful.\n",
+    "\"\"\"\n",
+    "\n",
+    "response = chain.invoke({\"text\": text_input})\n",
+    "\n",
+    "# Output the extracted data\n",
+    "response"
+   ]
   },
   {
    "cell_type": "code",
